# Lem_in

./: CMakeLists.txt  Makefile  map.txt
inc/: lem-in.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_check_sign_double.c  ft_cntchr.c  ft_cntwrd.c  ft_doublstrdel.c  ft_ftoa.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstaddr.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_numinstr.c  ft_numlen.c  ft_pow.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_srtwrd.c  ft_strcat.c  ft_strchr.c  (+33 more)
src/: ants_move.c  clean_memory.c  find_way.c  ft_strdeli.c  ft_strsplit_max.c  main.c  parsing.c  parsing_link.c  parsing_room.c  print_result.c
